2004-02-15 20:56  Gregory John Casamento <greg_casamento@yahoo.com>
	
	* Source/GSNibCompatibility.m: Removal of keyed archiver
	code in deprecated template NSWindowTemplate.  I commented this
	out as we need to determine how to implement this with the 
	keyed archiver changes in the new templates.

2004-02-15  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSLayoutManager.m: 
	* Source/NSTextContainer.m:
	* Source/NSTextStorage.m:
	* Source/GSNibCompatibility.m: (NSWindowTemplate 
	More keyed dearchiving.
	* Source/NSView.m: (-initWithCoder:)
	Don't keyed decode next responder, as this gets set by superview
	anyway. 

2004-02-14 23:05  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSNib.[hm]: Corrected previous issue with NSNib.  
	Uncommented the code and cleaned up the implementation.
	
2004-02-14 22:56  Matt Rice <ratmice@yahoo.com>
		  Alexander Malmberg <alexander@malmberg.org>

	* Tools/gopen.m (main): Remove NSTask-based app launching code; always
	use [NSWorkspace -launchApplication:] to launch applications.

2004-02-14  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSOutlineView.m: (-reloadItem:reloadChildren:) Simplified
	and corrected code by inlining the method
	[_findItem:childIndex:ofParent:]. 

2004-02-13  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButtonCel.m: (-setObjectValue:, -objectValue)
	Implemented to set/return the state. 
	(-mouseEntered:, -mouseExited:, -drawWithFrame:inView:)
	Partially added old showsBorderOnlyWhileMouseInside patch from
	Michael Hanni (mhanni@yahoo.com).
	* Headers/Additions/GNUstepGUI/GSDrawFunctions.h:
	* Source/GSDrawFunctions.m: New gradient border drawing method.

2004-02-12  Adam Fedor  <fedor@gnu.org>

	* Documentation/GuiUser/KeyboardSetup.gsdoc: Update.
	* Source/DocMakefile (GuiUser_AGSDOC_FILES): Add it.

2004-02-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSOutlineView.m: (-draggingUpdated:) Applied patch from
	Andreas Heppel (andreas.heppel@sysgo.com) to determine drag
	operation correctly.
	