@@ -1,3 +1,7 @@
+2004-02-17 00:18  Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Headers/NSNib.h: Improved documentation.
+	
 2004-02-15 20:56  Gregory John Casamento <greg_casamento@yahoo.com>
 	
 	* Source/GSNibCompatibility.m: Removal of keyed archiver
